View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0029975 | Open CASCADE | OCCT:Visualization | public | 2018-07-20 10:27 | 2018-07-28 12:39 |
Reporter | kgv | Assigned To | bugmaster | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 7.4.0 | ||||
Target Version | 7.4.0 | Fixed in Version | 7.4.0 | ||
Summary | 0029975: Visualization - Graphic3d_ClipPlane::ProbeBox() returns Out for fully In box | ||||
Description | Graphic3d_ClipPlane::ProbeBox() is messed up while handling Union of clipping planes in chain - the early out should be Graphic3d_ClipState_In (it is enough to have at least one clipping plane in chain) instead of Graphic3d_ClipState_Out (ALL clipping planes should clip the box). | ||||
Steps To Reproduce | pload MODELING VISUALIZATION vclear vinit View1 box b0 0 -10 0 20 10 10 box b1 0 40 0 20 10 70 box b2 0 10 0 10 30 70 vdisplay -dispMode 1 b0 b1 b2 vaspects b0 -setColor RED vaspects b1 -setColor GREEN vaspects b2 -setColor PURPLE vfit vclipplane pln -set -equation1 0 0 -1 40 -equation2 0 1 0 -15 if { [vreadpixel 150 370 name rgb] != "RED3" } { puts "Error" } | ||||
Tags | No tags attached. | ||||
Test case number | v3d/glsl/clipping1 | ||||
|
Branch CR29975 has been created by kgv. SHA-1: 233bc783b5b6264193cbdaa1d4c70a76c9c642de Detailed log of new commits: Author: kgv Date: Fri Jul 20 10:40:14 2018 +0300 0029975: Visualization - Graphic3d_ClipPlane::ProbeBox() returns Out for fully In box Author: kgv Date: Thu Jul 19 20:32:51 2018 +0300 0029974: Visualization - OpenGl_Layer::Render() produces inconsistent state of Polygon Offset settings OpenGl_Layer::Render() now calls OpenGl_Workspace::SetDefaultPolygonOffset() for managing default polygon offset settings considering OpenGl_Workspace applied aspect logic. |
|
Branch CR29975 has been updated forcibly by kgv. SHA-1: 6dafa64de7c3db52ab4a2e2220fe83794ec83b54 |
|
Patch is ready for review. http://jenkins-test-11.nnov.opencascade.com/view/CR29975-master-KGV/ |
|
Branch CR29975 reviewed without remarks. |
|
Combination - OCCT branch : CR29975 SHA - 6dafa64de7c3db52ab4a2e2220fe83794ec83b54 Products branch : master SHA - edc03a9d94e87d0141f8dbfdc1c42f755e9765d9 was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian70-64: OCCT Total CPU difference: 17391.12999999997 / 17080.800000000007 [+1.82%] Products Total CPU difference: 7467.760000000027 / 7461.820000000036 [+0.08%] Windows-64-VC10: OCCT Total CPU difference: 16890.072268998567 / 16984.608874998572 [-0.56%] Products Total CPU difference: 8276.477053999892 / 8248.209672799876 [+0.34%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR29975 has been deleted by inv. SHA-1: 6dafa64de7c3db52ab4a2e2220fe83794ec83b54 |
Date Modified | Username | Field | Change |
---|---|---|---|
2018-07-20 10:27 | kgv | New Issue | |
2018-07-20 10:27 | kgv | Assigned To | => kgv |
2018-07-20 10:29 | kgv | Relationship added | child of 0029729 |
2018-07-20 10:41 | git | Note Added: 0077842 | |
2018-07-20 10:51 | kgv | Steps to Reproduce Updated | |
2018-07-20 11:02 | git | Note Added: 0077843 | |
2018-07-20 12:20 | kgv | Note Added: 0077850 | |
2018-07-20 12:20 | kgv | Assigned To | kgv => san |
2018-07-20 12:20 | kgv | Status | new => resolved |
2018-07-24 18:08 | san | Note Added: 0077974 | |
2018-07-24 18:08 | san | Assigned To | san => bugmaster |
2018-07-24 18:08 | san | Status | resolved => reviewed |
2018-07-24 18:56 | bugmaster | Test case number | => v3d/glsl/clipping1 |
2018-07-24 18:59 | bugmaster | Note Added: 0077978 | |
2018-07-24 18:59 | bugmaster | Status | reviewed => tested |
2018-07-28 12:26 | bugmaster | Changeset attached | => occt master 6f26baa0 |
2018-07-28 12:26 | bugmaster | Status | tested => verified |
2018-07-28 12:26 | bugmaster | Resolution | open => fixed |
2018-07-28 12:39 | git | Note Added: 0078143 |