0029975: Visualization - Graphic3d_ClipPlane::ProbeBox() returns Out for fully In box